# financials-chatbot

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/assets/: model_list.yaml  workflow.mmd
backend/scripts/: load_sql.py  load_vectors.py  reembed_vectors_from_pdfs.py
backend/src/financial_qa/: __init__.py
backend/src/financial_qa/app/: __init__.py  main.py
backend/src/financial_qa/app/agent/: __init__.py  chat_agent.py  coverage.py  events.py  graph.py  nodes.py  prompt.py  schemas.py  service.py  tools.py
backend/src/financial_qa/app/api/: __init__.py  deps.py
backend/src/financial_qa/app/api/routes/: auth.py  chat.py  health.py  sections.py  users.py
backend/src/financial_qa/app/infrastructure/: __init__.py  db.py  history.py  models.py  security.py  sessions.py  settings.py
backend/src/financial_qa/app/integrations/: __init__.py
backend/src/financial_qa/app/integrations/llm/: __init__.py  embeddings.py  model_list_loader.py  models.py
backend/src/financial_qa/app/integrations/observability/: __init__.py  langfuse.py
backend/src/financial_qa/app/integrations/vectorstore/: __init__.py  pinecone_client.py
frontend/: package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/lib/: api.ts  types.ts
