[project]
name = "financial-qa"
version = "0.1.0"
description = "Grounded financial QA chatbot (FastAPI + LangGraph + Pinecone + PostgreSQL)"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    # API / server
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "python-multipart>=0.0.18",
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.5,<3",
    "email-validator>=2.2,<3",

    # LangChain / LangGraph / LiteLLM (aligned with the reference stack)
    "langchain==1.2.9",
    "langchain-core==1.4.0",
    "langchain-text-splitters>=1.0,<2",
    "langgraph==1.0.10",
    "langchain-litellm==0.6.1",
    "litellm==1.81.15",
    "openai>=2.0,<3",

    # Vector DB
    "pinecone>=5.0,<6",
    "pypdf>=5,<7",

    # Persistence
    "SQLAlchemy[asyncio]>=2.0.36,<2.1",
    "asyncpg>=0.30,<0.31",
    "psycopg[binary]>=3.2,<4",

    # SQL safety (read-only SELECT validation)
    "sqlglot>=25.0",

    # Auth
    "passlib[bcrypt]>=1.7.4,<2",
    "bcrypt==4.0.1",
    "PyJWT>=2.8,<3",

    # Observability / config / assets
    "langfuse>=3.0,<4",
    "pyyaml>=6.0,<7",
    "python-dotenv>=1.0,<2",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<2",
    "httpx>=0.27,<1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
